        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=32445
        REGRESSION: http://www.mcafee.com/japan/ displays unstyled

        * css/CSSImportRule.cpp:
        (WebCore::CSSImportRule::setCSSStyleSheet):
        * html/HTMLLinkElement.cpp:
        (WebCore::HTMLLinkElement::setCSSStyleSheet):
        Add a quirk for mcafee.com/japan (http or https, with or without www).



Canonical link: https://commits.webkit.org/43456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52032 268f45cc-cd09-0410-ab3c-d52691b4dbfc